--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2663,4 +2663,19 @@ found in the list of installed applications.</string>
     <string name="sound_category_calls_title">Incoming calls</string>
     <string name="sound_category_notification_title">Notifications</string>
     <string name="sound_category_feedback_title">Feedback</string>
+
+    <string name="memory_low">Memory low</string>
+    <string name="memory_low1">Internal memory space is low</string>
+    <string name="nand_memory">NAND flash</string>
+    <string name="nand_eject">Unmount NAND flash</string>
+    <string name="nand_eject_summary">Unmount the NAND flash so you can safely remove it</string>
+    <string name="nand_insert_summary">Insert an NAND flash for mounting</string>
+    <string name="nand_mount">Mount NAND flash</string>
+    <string name="nand_mount_summary">Mount the NAND flash</string>
+    <string name="nand_format">Erase NAND flash</string>
+    <string name="nand_format_summary">"Erases all data on the device's NAND flash, such as music and photos"</string>
+    <string name="nand_unavailable">Unavailable</string>
+    <string name="media_format_desc_nand">This action will erase the internal mass storage. You will lose <b>all</b> data stored there!</string>
+    <string name="media_format_nand_button_text">Erase Internal Mass Storage</string>
+    <string name="media_format_final_desc_nand">Erase internal mass storage, deleting all files stored there? Action cannot be reversed!</string>
 </resources>
