--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -1161,4 +1161,6 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"來電"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"通知"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"意見"</string>
+    <string name="ethernet_settings">以太網路設定</string>
+    <string name="ethernet_settings_summary">設置與管理有線以太網路</string>
 </resources>
