--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1184,4 +1184,6 @@
     <string name="media_format_desc_nand">此项操作将格式化内部大容量存储设备，存储在该设备上的<b>所有数据</b>将丢失!</string>
     <string name="media_format_nand_button_text">格式化内部大容量存储设备</string>
     <string name="media_format_final_desc_nand">确定是否格式化内部大容量存储设备, 擦除该设备上的所有数据? 该操作无法回滚!</string>
+    <string name="ethernet_settings">以太网设置</string>
+    <string name="ethernet_settings_summary">设置和管理有线以太网连接</string>
 </resources>
