--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2694,4 +2694,7 @@ found in the list of installed applications.</string>
     <string name="autoshutdown_timeout_summary">Auto shutdown settings</string>
     <string name="shutdown">Auto shutdown</string>
     <string name="dialog_cancel">CANCEL</string>
+    <string name="display_settings_calendar">Calendar</string>
+    <string name="updatemedialibtitle">Update Media Library</string>
+    <string name="updatemedialibmsg">Please wait a moment</string>
 </resources>
