--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2699,4 +2699,5 @@ found in the list of installed applications.</string>
     <string name="updatemedialibmsg">Please wait a moment</string>
     <string name="epd_full_timeout">Repaint Full timeout</string>
     <string name="epd_full_timeout_summary">Adjust the delay before repaint full automatically</string>
+    <string name="drm_settings">Drm settings</string>
 </resources>
