--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1161,4 +1161,6 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"Входящие вызовы"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"Оповещения"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Отклик на действия"</string>
+    <string name="nand_format">Очистить NAND флэш</string>
+    <string name="nand_format_summary">"Удалить всю информацию из памяти, включая ваши книги? "</string>
 </resources>
