--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -520,7 +520,7 @@
     <string name="device_info_not_available" msgid="8062521887156825182">"不可用"</string>
     <string name="device_status_activity_title" msgid="1411201799384697904">"状态消息"</string>
     <string name="device_status" msgid="607405385799807324">"状态消息"</string>
-    <string name="device_status_summary" msgid="2599162787451519618">"电话号码、信号等"</string>
+    <string name="device_status_summary" msgid="2599162787451519618">"设备号码、信号等"</string>
     <string name="storage_settings" msgid="4211799979832404953">"存储"</string>
     <string name="storage_settings_title" msgid="8746016738388094064">"存储设置"</string>
     <string name="storage_settings_summary" product="nosdcard" msgid="3543813623294870759">"卸载 USB 存储设备，查看可用存储设备"</string>
@@ -663,6 +663,7 @@
     <string name="assisted_gps" msgid="4649317129586736885">"使用增强型 GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"使用服务器来辅助 GPS（取消选中可降低网络使用率）"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"使用服务器来辅助 GPS（取消选中可提高 GPS 性能）"</string>
+    <string name="reader_doctor">电子书医生</string>
     <string name="about_settings">关于设备</string>
     <string name="about_settings_summary">查看法律信息、设备状态和软件版本</string>
     <string name="legal_information" msgid="5769301644270604095">"法律信息"</string>
@@ -857,7 +858,7 @@
     <string name="user_dict_settings_edit_dialog_title" msgid="8967476444840548674">"编辑字词"</string>
     <string name="user_dict_settings_context_menu_edit_title" msgid="2210564879320004837">"编辑"</string>
     <string name="user_dict_settings_context_menu_delete_title" msgid="9140703913776549054">"删除"</string>
-    <string name="user_dict_settings_empty_text" msgid="6209268025109242806">"用户词典中没有您定义的字词。您可以按 MENU 添加字词。"</string>
+    <string name="user_dict_settings_empty_text" msgid="6209268025109242806">"用户词典中没有您定义的字词。您可以按触摸屏幕底部添加字词。"</string>
     <string name="testing" msgid="6584352735303604146">"测试"</string>
     <string name="testing_phone_info">设备信息</string>
     <string name="testing_battery_info" msgid="3497865525976497848">"电池信息"</string>
