--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -274,7 +274,7 @@
     <!-- The title of the activity to pick a time zone. -->
     <string name="choose_timezone">Select time zone</string>
     <!-- Do not translate. Used as the value for a setting. -->
-    <string name="default_date_format"><xliff:g id="default_date_format">MM.dd.yyyy</xliff:g></string>
+    <string name="default_date_format"><xliff:g id="default_date_format">MM/dd/yyyy</xliff:g></string>
 
     <!-- The option in the date-format picker for using the normal format
          called for by the user's locale. -->
