--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1558,6 +1558,7 @@
     <!-- Security & location settings screen, setting summary when Assisted GPS check box is clear -->
     <string name="assisted_gps_disabled">Use server to assist GPS (uncheck to improve GPS performance)</string>
 
+    <string name="reader_doctor">Reader Doctor</string>
     <!-- About --> <skip />
     <!-- Main settings screen, setting title for the user to go into the About phone screen -->
     <string name="about_settings">About device</string>
@@ -2001,7 +2002,7 @@ found in the list of installed applications.</string>
     <!-- User dictionary settings. The title of the context menu item to delete the current word -->
     <string name="user_dict_settings_context_menu_delete_title">Delete</string>
     <!-- User dictionary settings. The text to show when there are no user-defined words in the dictionary -->
-    <string name="user_dict_settings_empty_text">You do not have any words in the user dictionary. You can add a word through the menu.</string>
+    <string name="user_dict_settings_empty_text">You do not have any words in the user dictionary. You can add a word through touch the bottom.</string>
 
     <!-- This is for diagnostics screen. The title of a screen with various items realted to launching screens that will giev the user info. For example, it contains "Phone information" and "Battery information" -->
     <string name="testing">Testing</string>
