--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -204,7 +204,7 @@
     <string name="device_info_label" msgid="6551553813651711205">"Informacje o urządzeniu"</string>
     <string name="battery_info_label" msgid="4132685016148679403">"Informacje o baterii"</string>
     <string name="display_label" msgid="7403874003169865762">"Wyświetlacz"</string>
-    <string name="phone_info_label" msgid="2127552523124277664">"Informacje o telefonie"</string>
+    <string name="phone_info_label" msgid="2127552523124277664">"Informacje o urządzeniu"</string>
     <string name="sd_card_settings_label" product="nosdcard" msgid="8101475181301178428">"Nośnik USB"</string>
     <string name="sd_card_settings_label" product="default" msgid="5743100901106177102">"Karta SD"</string>
     <string name="proxy_settings_label" msgid="3271174136184391743">"Ustawienia proxy"</string>
@@ -478,6 +478,8 @@
     <string name="brightness_summary" msgid="838917350127550703">"Dostosuj jasność ekranu"</string>
     <string name="screen_timeout" msgid="4882669461447531301">"Wygaszanie ekranu"</string>
     <string name="screen_timeout_summary" msgid="2905757633140605334">"Dostosuj opóźnienie automatycznego wyłączenia ekranu"</string>
+    <string name="power_off_timeout">Czas Do Wyłączenia</string>
+    <string name="power_off_timeout_summary">Dostosowanie czasu po którym nastąpi wyłączenie</string>
     <string name="automatic_brightness" msgid="5014143533884135461">"Automatyczna jasność"</string>
     <string name="sim_lock_settings" msgid="3392331196873564292">"Ustawienia blokady karty SIM"</string>
     <string name="sim_lock_settings_category" msgid="5136244267576697004">"Ustaw blokadę SIM"</string>
@@ -509,9 +511,9 @@
     <string name="kernel_version" msgid="9192574954196167602">"Wersja jądra"</string>
     <string name="build_number" msgid="3075795840572241758">"Numer kompilacji"</string>
     <string name="device_info_not_available" msgid="8062521887156825182">"Niedostępna"</string>
-    <string name="device_status_activity_title" msgid="1411201799384697904">"Informacje o telefonie"</string>
-    <string name="device_status" msgid="607405385799807324">"Informacje o telefonie"</string>
-    <string name="device_status_summary" msgid="2599162787451519618">"Numer telefonu, sygnał itd."</string>
+    <string name="device_status_activity_title" msgid="1411201799384697904">"Informacje o urządzeniu"</string>
+    <string name="device_status" msgid="607405385799807324">"Informacje o urządzeniu"</string>
+    <string name="device_status_summary" msgid="2599162787451519618">"Numer urządzeniu, sygnał itd."</string>
     <string name="storage_settings" msgid="4211799979832404953">"Pamięć"</string>
     <string name="storage_settings_title" msgid="8746016738388094064">"Ustawienia pamięci"</string>
     <string name="storage_settings_summary" product="nosdcard" msgid="3543813623294870759">"Odłącz nośnik USB i wyświetl ilość dostępnej pamięci"</string>
@@ -531,10 +533,11 @@
     <string name="status_unavailable" msgid="7862009036663793314">"Niedostępny"</string>
     <string name="status_up_time" msgid="7294859476816760399">"Czas działania"</string>
     <string name="status_awake_time" msgid="2393949909051183652">"Czas działania (włączony)"</string>
-    <string name="internal_memory" msgid="9129595691484260784">"Pamięć wewnętrzna"</string>
+    <string name="internal_memory" msgid="9129595691484260784">"Pamięć urządzenia"</string>
     <string name="sd_memory" product="nosdcard" msgid="2510246194083052841">"Nośnik USB"</string>
     <string name="sd_memory" product="default" msgid="151871913888051515">"Karta SD"</string>
     <string name="memory_available" msgid="418542433817289474">"Dostępne miejsce"</string>
+    <string name="internal_memory_available">Wolna pamięć</string>
     <string name="memory_size" msgid="6629067715017232195">"Całkowita pojemność"</string>
     <string name="sd_eject" product="default" msgid="6915293408836853020">"Odłącz kartę SD"</string>
     <string name="sd_eject_summary" product="nosdcard" msgid="5009296896648072891">"Odłącz wewnętrzny nośnik USB"</string>
@@ -654,7 +657,7 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Użyj wspomaganego systemu GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Użyj serwera do wspomagania systemu GPS (usuń zaznaczenie, aby zmniejszyć ruch sieciowy)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Użyj serwera do wspomagania systemu GPS (usuń zaznaczenie, aby zwiększyć wydajność systemu GPS)"</string>
-    <string name="about_settings" msgid="1743378368185371685">"Informacje o telefonie"</string>
+    <string name="about_settings" msgid="1743378368185371685">"Informacje o urządzeniu"</string>
     <string name="about_settings_summary" msgid="3302263393543848667">"Wyświetl informacje prawne, stan telefonu, wersję oprogramowania"</string>
     <string name="legal_information" msgid="5769301644270604095">"Informacje prawne"</string>
     <string name="contributors_title" msgid="5917703088825286504">"Współautorzy"</string>
@@ -850,7 +853,7 @@
     <string name="user_dict_settings_context_menu_delete_title" msgid="9140703913776549054">"Usuń"</string>
     <string name="user_dict_settings_empty_text" msgid="6209268025109242806">"Nie masz żadnych słów w słowniku użytkownika. Możesz dodać słowo poprzez menu."</string>
     <string name="testing" msgid="6584352735303604146">"Testowanie"</string>
-    <string name="testing_phone_info" msgid="8656693364332840056">"Informacje o telefonie"</string>
+    <string name="testing_phone_info" msgid="8656693364332840056">"Informacje o urządzeniu"</string>
     <string name="testing_battery_info" msgid="3497865525976497848">"Informacje o baterii"</string>
     <string name="quick_launch_title" msgid="7904609846945905306">"Szybkie uruchamianie"</string>
     <string name="quick_launch_summary" msgid="3453825712466417452">"Ustaw skróty klawiaturowe, aby uruchamiać aplikacje"</string>
@@ -931,7 +934,7 @@
     <string name="power_bluetooth" msgid="4373329044379008289">"Bluetooth"</string>
     <string name="power_cell" msgid="6596471490976003056">"Komórka w trybie gotowości"</string>
     <string name="power_phone" msgid="5392641106474567277">"Połączenia głosowe"</string>
-    <string name="power_idle" msgid="9055659695602194990">"Telefon nieaktywny"</string>
+    <string name="power_idle" msgid="9055659695602194990">"Urządzenie nieaktywne"</string>
     <string name="usage_type_cpu" msgid="715162150698338714">"Łącznie dla procesora"</string>
     <string name="usage_type_cpu_foreground" msgid="6500579611933211831">"Procesor w działaniach pierwszoplanowych"</string>
     <string name="usage_type_wake_lock" msgid="5125438890233677880">"Utrzymuj aktywność"</string>
@@ -1161,4 +1164,52 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"Połączenia przychodzące"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"Powiadomienia"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Reakcje"</string>
+    <string name="memory_low">Mało pamięci</string>
+    <string name="memory_low1">Mało pamięci wewnętrznej</string>
+    <string name="nand_memory">Pamięć wewnętrzna</string>
+    <string name="nand_eject">Odmontuj pamięć wewnętrzną</string>
+    <string name="nand_eject_summary">Odmontuj pamięć wewnętrzną by bezpiecznie usunąć urządzenie</string>
+    <string name="nand_insert_summary">Podłącz pamięć wewnetrzną</string>
+    <string name="nand_mount">Zamontuj pamięć wewnętrzną</string>
+    <string name="nand_mount_summary">Zamontuj pamięć wewnętrzną</string>
+    <string name="nand_format">Wyczyść pamięć wewnętrzną</string>
+    <string name="nand_format_summary">Usuwa wszystkie dane w pamięci wewnętrznej urządzenia, takie jak muzyka I fotografie</string>
+    <string name="nand_unavailable">Niedostępny</string>
+    <string name="media_format_desc_nand">Ta operacja wyczyści pamięć wewnętrzną. Wszystkie przechowywane dane &lt;b>zostaną utracone&lt;b>!</string>
+    <string name="media_format_nand_button_text">Wyczyść pamięć wewnętrzną</string>
+    <string name="media_format_final_desc_nand">Wyczyścić pamięć wewnętrzną? Operacja jest nieodwracalna!</string>
+    <string name="wifi_wps_pbc">WPS PBC</string>
+    <string name="wifi_wps_pbc_summary">Skonfiguruj połączenie WPA przez WPS PBC</string>
+    <string name="ethernet_settings">Ustawienia Ethernet</string>
+    <string name="ethernet_settings_summary">Ustaw I zarządzaj połączeniami Ethernet</string>
+    <string name="rockchip_compatibility_mode">Tryb zgodności</string>
+    <string name="enter_compatibility_mode">Uruchom w trybie zgodności</string>
+    <string name="exit_compatibility_mode">Uruchom normalnie</string>
+    <string name="rockchip_compatibility_info">Ta aplikacja działa w trybie zgodności.</string>
+    <string name="rockchip_normal_info">Ta aplikacja działa normalnie.</string>
+    <string name="wakeup_brightness">Wybudź</string>
+    <string name="wakeup_brightness_summary">Podświetl ekran po wybudzeniu</string>
+    <string name="epd_full_timeout">Interwał Pełnego Odświeżenia</string>
+    <string name="epd_full_timeout_summary">Dostosuj opóźnienie automatycznego, pełenego odświeżenia</string>
+    <string name="Preferred_Applications">Preferowane Aplikacje</string>
+    <string name="key_map_options">Opcje Mapowania Klawiszy</string>
+    <string name="key_keyboard">Klawiatura</string>
+    <string name="media_format_usb_title">Wyczyść pamięć zewnętrzną USB</string>
+    <string name="font">Czcionka</string>
+    <string name="loading">wczytywanie...</string>
+    <string name="loading_error">Błąd Wczytywania</string>
+    <string name="set_font_dialog_tile">Ustaw Czcionkę</string>
+    <string name="reboot_device">Zrestartować urządzenie?</string>
+    <string name="serialnumber">Numer Seryjny</string>
+    <string name="adobe_id">Zarejestrowany Identyfikator Adobe:</string>
+    <string name="drm_title">Ustawienia DRM</string>
+    <string name="button_register">rejestruj</string>
+    <string name="button_change">zmień</string>
+    <string name="button_deregister">odrejestruj</string>
+    <string name="drm_dialog_title">Aktywuj Urządzenie dla DRM</string>
+    <string name="adobe_id_text">Identyfikator Adobe:</string>
+    <string name="adobe_password">Hasło:</string>
+    <string name="dilog_show_password">Pokaż Hasło</string>
+    <string name="show_id_null_error">Pole identyfikatora nie może być puste!</string>
+    <string name="show_password_null_error">Pole hasła nie może być puste!</string>
 </resources>
