--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1301,7 +1301,7 @@
     <!-- About phone, status item title.  How much time the device has had its main CPU awake. -->
     <string name="status_awake_time">Awake time</string>
     <!-- SD card & phone storage settings screen heading. This is displayed above items that pertain to the phone's internal storage  -->
-    <string name="internal_memory">Internal storage</string>
+    <string name="internal_memory">Device memory</string>
     <!-- SD card & phone storage settings screen heading. This is displayed above items that pertain to the SD card [CHAR LIMIT=30] -->
     <string name="sd_memory" product="nosdcard">USB storage</string>
     <!-- SD card & phone storage settings screen heading. This is displayed above items that pertain to the SD card -->
@@ -2669,14 +2669,14 @@ found in the list of installed applications.</string>
 
     <string name="memory_low">Memory low</string>
     <string name="memory_low1">Internal memory space is low</string>
-    <string name="nand_memory">NAND flash</string>
-    <string name="nand_eject">Unmount NAND flash</string>
-    <string name="nand_eject_summary">Unmount the NAND flash so you can safely remove it</string>
-    <string name="nand_insert_summary">Insert an NAND flash for mounting</string>
-    <string name="nand_mount">Mount NAND flash</string>
-    <string name="nand_mount_summary">Mount the NAND flash</string>
-    <string name="nand_format">Erase NAND flash</string>
-    <string name="nand_format_summary">"Erases all data on the device's NAND flash, such as music and photos"</string>
+    <string name="nand_memory">Internal storage</string>
+    <string name="nand_eject">Unmount Internal storage</string>
+    <string name="nand_eject_summary">Unmount the Internal storage so you can safely remove it</string>
+    <string name="nand_insert_summary">Insert an Internal storage for mounting</string>
+    <string name="nand_mount">Mount Internal storage</string>
+    <string name="nand_mount_summary">Mount the Internal storage</string>
+    <string name="nand_format">Erase internal storage</string>
+    <string name="nand_format_summary">"Erases all data on the device's internal storage, such as music and photos"</string>
     <string name="nand_unavailable">Unavailable</string>
     <string name="media_format_desc_nand">This action will erase the internal mass storage. You will lose <b>all</b> data stored there!</string>
     <string name="media_format_nand_button_text">Erase Internal Mass Storage</string>
