--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1185,6 +1185,10 @@
     <string name="screen_timeout">Screen timeout</string>
     <!-- Sound & display settings screen, setting option summary to change screen timeout -->
     <string name="screen_timeout_summary">Adjust the delay before the screen automatically turns off</string>
+
+    <string name="power_off_timeout">Power Off timeout</string>
+    <string name="power_off_timeout_summary">Adjust the delay before the power off automatically</string>
+
     <!-- Sound & display settings screen, setting option name to change whether the screen adjusts automatically based on lighting conditions -->
     <string name="automatic_brightness">Automatic brightness</string>
 
