--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1845,4 +1845,52 @@
     <string name="screenshot_version">截屏管理器版本</string>
     <string name="screenshot_storage_title">设置截屏图片存储位置</string>
     <string name="later">秒以后截屏</string>
+    <string name="ethernet_quick_toggle_title">使用以太网</string>
+    <string name="ethernet_quick_toggle_summary">打开以太网</string>
+    <string name="ethernet_settings">以太网</string>
+    <string name="ethernet_settings_title">以太网</string>
+    <string name="ethernet_settings_summary">设置以太网</string>
+    <string name="ethernet_ip_addr">IP地址</string>
+    <string name="ethernet_netmask">子网掩码</string>
+    <string name="ethernet_gateway">默认网关</string>
+    <string name="ethernet_dns1">域名1</string>
+    <string name="ethernet_dns2">域名2</string>
+    <string name="ethernet_mac">MAC地址</string>
+    <string name="ethernet_connected">已连接</string>
+    <string name="ethernet_connecting">连接中</string>
+    <string name="ethernet_unconnected">未连接</string>
+    <string name="ethernet_static_settings">静态IP设置</string>
+    <string name="ethernet_controls">Ethernet controls</string>
+    <string name="ethernet_linkage_status">Linkage status</string>
+    <string name="ethernet_enable_new_ip_settings">Enable new IP settings</string>
+    <string name="ethernet_ip_networks_status">IP network status</string>
+    <string name="ethernet">以太网</string>
+    <string name="ethernet_error_starting">Unable to start Ethernet</string>
+    <string name="ethernet_error_stopping">Unable to stop Ethernet</string>
+    <string name="ethernet_ip_settings_titlebar">IP settings</string>
+    <string name="ethernet_ip_settings_invalid_ip">请输入有效的IP地址.</string>
+    <string name="ethernet_use_static_ip">使用静态IP地址</string>
+    <string name="ethernet_static_ip_address">IP地址</string>
+    <string name="ethernet_static_dns1">域名1</string>
+    <string name="ethernet_static_dns2">域名2</string>
+    <string name="ethernet_static_gateway">默认网关</string>
+    <string name="ethernet_static_netmask">子网掩码</string>
+    <string name="ethernet_advanced_mac_address_title">MAC地址</string>
+    <string name="ethernet_advanced_ip_address_title">IP地址</string>
+    <string name="linkage_status_disconnected">Link detected: no. Ethernet is disconnected phisically!</string>
+    <string name="linkage_status_dev_fail">Failed to turn up ethernet device! Is it esistent?</string>
+    <string name="duplex_full">Full</string>
+    <string name="duplex_half">Half</string>
+    <string name="duplex_unknown">Unknown</string>
+    <string name="linkage_status_format" formatted="false">Link detected: yes. Speed: %dMb/s. Duplex: %s.</string>
+    <string name="ip_network_status_connecting">Configing ethernet interface.</string>
+    <string name="ip_network_status_connected">Config ethernet interface successfully.</string>
+    <string name="ip_network_status_failed">Fail to config ethernet interface!</string>
+    <string name="ip_network_status_unavailable">Not available.</string>
+    <string name="eth_ip_settings_please_complete_settings">请输入完整的IP地址信息!</string>
+    <string name="eth_ip_settings_eth_is_disabled">Ethernet is disabled.</string>
+    <string name="ethernet_static_ip_settings_title">静态IP设置</string>
+    <string name="category_ethernet">静态IP设置</string>
+    <string name="staticip_save">保存</string>
+    <string name="staticip_cancel">取消</string>
 </resources>
