--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4397,6 +4397,59 @@
     <string name="screenshot_version">Show the version of screenshot manager.</string>
     <string name="screenshot_storage_title">Set the location of screenshot storage</string>
     <string name="later">s later capture</string>
+    <string name="ethernet_quick_toggle_title">Use Ethernet</string>
+    <string name="ethernet_quick_toggle_summary">Enable Ethernet</string>
+    <string name="ethernet_settings">Ethernet</string>
+    <string name="ethernet_settings_title">Ethernet</string>
+    <string name="ethernet_settings_summary">Manager ethernet</string>
+    <string name="ethernet_ip_addr">IP address</string>
+    <string name="ethernet_netmask">netmask</string>
+    <string name="ethernet_gateway">gateway</string>
+    <string name="ethernet_dns1">dns1</string>
+    <string name="ethernet_dns2">dns2</string>
+    <string name="ethernet_mac">MAC address</string>
+    <string name="ethernet_connected">Connected</string>
+    <string name="ethernet_connecting">Connecting</string>
+    <string name="ethernet_unconnected">Unconnected</string>
+    <string name="ethernet_static_settings">Static IP Setttings</string>
+    <string name="ethernet_controls">Ethernet controls</string>
+    <string name="ethernet_linkage_status">Linkage status</string>
+    <string name="ethernet_enable_new_ip_settings">Enable new IP settings</string>
+    <string name="ethernet_ip_networks_status">IP network status</string>
+    <string name="ethernet">Ethernet</string>
+    <string name="ethernet_error_starting">Unable to start Ethernet</string>
+    <string name="ethernet_error_stopping">Unable to stop Ethernet</string>
+    <string name="ethernet_ip_settings_titlebar">IP settings</string>
+    <string name="ethernet_ip_settings_invalid_ip">Please type a valid IP address.</string>
+    <string name="ethernet_use_static_ip">Use static IP</string>
+    <string name="ethernet_static_ip_address">IP address</string>
+    <string name="ethernet_static_dns1">DNS 1</string>
+    <string name="ethernet_static_dns2">DNS 2</string>
+    <string name="ethernet_static_gateway">Gateway</string>
+    <string name="ethernet_static_netmask">Netmask</string>
+    <string name="ethernet_advanced_mac_address_title">MAC address</string>
+    <string name="ethernet_advanced_ip_address_title">IP address</string>
+    <string name="linkage_status_disconnected">Link detected: no. Ethernet is disconnected phisically!</string>
+    <string name="linkage_status_dev_fail">Failed to turn up ethernet device! Is it esistent?</string>
+    <string name="duplex_full">Full</string>
+    <string name="duplex_half">Half</string>
+    <string name="duplex_unknown">Unknown</string>
+    <string name="linkage_status_format" formatted="false">Link detected: yes. Speed: %dMb/s. Duplex: %s.</string>
+    <string name="ip_network_status_connecting">Configing ethernet interface.</string>
+    <string name="ip_network_status_connected">Config ethernet interface successfully.</string>
+    <string name="ip_network_status_failed">Fail to config ethernet interface!</string>
+    <string name="ip_network_status_unavailable">Not available.</string>
+    <string name="eth_ip_settings_please_complete_settings">Please give complete static IP settings!</string>
+    <string name="eth_ip_settings_eth_is_disabled">Ethernet is disabled.</string>
+    <string name="ethernet_static_ip_settings_title">Static IP Setttings</string>
+    <string name="category_ethernet">Static IP Setttings</string>
+    <string name="staticip_save">Save</string>
+    <string name="staticip_cancel">Cancel</string>
+    <string name="str_ok">OK</string>
+    <string name="str_cancel">Cancel</string>
+    <string name="str_about">Important</string>
+    <string name="str_mesg">Whether save Settings?</string>
+    <string name="save_failed">Save failed!</string>
     <string name="dongle_insert">3G dongle insert!</string>
     <string name="title_resolution">Display mode</string>
     <string name="summary_resolution">%1$s</string>
