--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2053,6 +2053,10 @@
     <string name="usb_ptp_title">Camera (PTP)</string>
     <!-- Storage setting.  Label for installer CD [CHAR LIMIT=30]-->
     <string name="usb_ptp_summary">Lets you transfer photos using camera software, and transfer any files on computers that don\'t support MTP</string>
+    <!-- Storage setting.  Title for PTP checkbox [CHAR LIMIT=30]-->
+    <string name="usb_mass_title">Mass Storage</string>
+    <!-- Storage setting.  Label for installer CD [CHAR LIMIT=30]-->
+    <string name="usb_mass_summary">Use Mass Storage to share files</string>
     <!-- Storage setting.  Summary for PTP checkbox [CHAR LIMIT=NONE]-->
     <string name="usb_label_installer_cd">"Install file-transfer tools"</string>
 
