--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4457,4 +4457,14 @@
     <string name="set_resolution_failed_message">Failed to change display mode.</string>
     <string name="dlg_confirm_reboot_title">Reboot</string>
     <string name="dlg_confirm_reboot_text">System will reboot to change display mode.</string>
+    <string name="authdlg_title">Bluetooth Authorization Request</string>
+    <string name="authdlg_message">"'%1$s' is requesting permission to connect to %2$s."</string>
+    <string name="bluetooth_remote_device">bluetooth device</string>
+    <string name="authdlg_auto_reply">Do not ask again</string>
+    <string name="authdlg_service_opp">this phone</string>
+    <string name="authdlg_service_pbap">this phone to download contacts</string>
+    <string name="authdlg_service_default">this phone</string>
+    <string name="authdlg_service_accept">Authorize</string>
+    <string name="authdlg_service_decline">Decline</string>
+    <string name="authorizaion_failed_error">Authorization failed. Unable to connect to the remote device.</string>
 </resources>
