--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1838,4 +1838,11 @@
     <string name="hdmi_screen_zoom">屏幕缩放</string>
     <string name="hdmi_lcd_timeout">屏幕休眠</string>
     <string name="hdmi_settings">HDMI配置</string>
+    <string name="app_name">截屏管理器</string>
+    <string name="screenshot_manager">截屏设置</string>
+    <string name="screenshot_delay_title">延时截屏设置</string>
+    <string name="screenshot_show">在状态栏上显示截屏按钮</string>
+    <string name="screenshot_version">截屏管理器版本</string>
+    <string name="screenshot_storage_title">设置截屏图片存储位置</string>
+    <string name="later">秒以后截屏</string>
 </resources>
