--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -1166,6 +1166,8 @@
     <string name="refresh_times_summary">Selecionar o intervalo de atualização</string>
     <string name="epd_full_timeout">Tempo de excesso para redesenhar página</string>
     <string name="epd_full_timeout_summary">Conf. atraso antes de redesenhar página automaticamente</string>
+    <string name="drm_settings">Adobe DRM</string>
+    <string name="adobe_drm_info_default">Contém a tecnología BeBook® de Adobe Systems Incorporated.</string>
     <string name="shutdown_timeout">Desligamento automatico</string>
     <string name="shutdown_timeout_summary">O aparelho será desligado quando o tempo expire</string>
 </resources>
