--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -663,6 +663,7 @@
     <string name="assisted_gps" msgid="4649317129586736885">"使用增强型 GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"使用服务器来辅助 GPS（取消选中可降低网络使用率）"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"使用服务器来辅助 GPS（取消选中可提高 GPS 性能）"</string>
+    <string name="reader_doctor">电子书医生</string>
     <string name="about_settings">关于设备</string>
     <string name="about_settings_summary">查看法律信息、设备状态和软件版本</string>
     <string name="legal_information" msgid="5769301644270604095">"法律信息"</string>
