--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -16,6 +16,7 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="master_clear_all_date">¡Todos os dados serão perdidos!</string>
     <string name="yes" msgid="4676390750360727396">"Sim"</string>
     <string name="no" msgid="6731231425810196216">"Não"</string>
     <string name="device_info_default" msgid="7847265875578739287">"Desconhecido"</string>
