--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1171,4 +1171,6 @@
     <string name="refresh_times_summary">Выберите интервал обновления</string>
     <string name="epd_full_timeout">Автоматическое обновление экрана</string>
     <string name="epd_full_timeout_summary">Время автоматического обновления экрана</string>
+    <string name="shutdown_timeout">Автовыключение</string>
+    <string name="shutdown_timeout_summary">Время автоматического отключения при бездействии</string>
 </resources>
